--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,18 @@
-/* Général */
+/* INDEX */
+
+
+/* 
+1 - général
+2 - header
+3 - footer 
+4 - main
+5 - form
+6 - table
+7 - responsive
+*/
+
+
+/* GENERAL */
 
 * {
     margin: 0;
@@ -65,26 +79,6 @@ nav {
     justify-content: space-around;
 }
 
-.sectionIntro {
-    display: flex;
-    min-height: 65vh;
-    color: #253D45;
-    font-family: 'Noto Sans', sans-serif;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.sectionIntro article h1 {
-    text-transform: uppercase;
-}
-
-.sectionIntro article {
-    width: 50vw;
-    text-align: justify;
-}
-
 
 /* FOOTER */
 
@@ -108,6 +102,29 @@ footer a:hover {
 }
 
 
+/* MAIN */
+
+.sectionIntro {
+    display: flex;
+    min-height: 65vh;
+    color: #253D45;
+    font-family: 'Noto Sans', sans-serif;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.sectionIntro article h1 {
+    text-transform: uppercase;
+}
+
+.sectionIntro article {
+    width: 50vw;
+    text-align: justify;
+}
+
+
 /* FORM */
 
 form {
@@ -120,12 +137,6 @@ form div {
     margin-top: 10px;
 }
 
-
-/*label et champ l'un au dessus de l'autre*/
-
-
-/*Input: champs de texte*/
-
 input {
     background: none;
     outline: none;
@@ -137,17 +148,8 @@ input {
     padding: 10px;
 }
 
-
-/*labels, boutons*/
-
 label,
-input[type=submit],
-button {
-    font-weight: 500;
-    font-size: 0.6em;
-}
-
-label {
+.bouton {
     font-size: 0.8em;
     text-transform: uppercase;
 }
@@ -160,7 +162,6 @@ input:focus {
     padding: 20px;
     background-color: #253D45;
     overflow: hidden;
-    font-size: 0.8em;
     text-align: center;
     display: flex;
     align-items: center;
@@ -168,7 +169,6 @@ input:focus {
     border-radius: 25px;
     transition: 0.7s;
     color: white;
-    text-transform: uppercase;
 }
 
 .bouton:hover {
@@ -181,6 +181,9 @@ input:focus {
     text-align: center;
 }
 
+
+/* TABLE */
+
 table {
     width: 100%;
     border-collapse: collapse;
@@ -192,12 +195,12 @@ th {
     border-bottom: 1px solid black;
 }
 
+
+/* RESPONSIVE */
+
 @media only screen and (max-width: 600px) {
     header {
         height: 30vh;
-    }
-    .sectionIntro article {
-        font-size: 1em;
     }
     nav {
         width: 100%;
@@ -210,6 +213,9 @@ th {
     .Bodypages {
         min-height: 150vh;
         max-width: 100vw;
+    }
+    .sectionIntro article {
+        font-size: 1em;
     }
     #tableArticle {
         width: 80vw;
